--- a/README.org
+++ b/README.org
@@ -1,8 +1,17 @@
 * Overview
 
-  This is the project about our JSHDR.
+  This is the project about our JSHDR (CVPR2021).
 
-  [Paper](https://openaccess.thecvf.com/content/CVPR2021/papers/Fu_A_Multi-Task_Network_for_Joint_Specular_Highlight_Detection_and_Removal_CVPR_2021_paper.pdf).
+  [Paper](https://dl.acm.org/doi/abs/10.1145/3394171.3413586).
+
+  [[./images/highlight_removal.png]]
+
+  Figure 1: Visual comparison of highlight detection and removal on an
+  example image from our dataset. We compare our method with the
+  state-of-the-art removal method Shi /et al/. [7], Guo /et al/. [6],
+  and Yang /et al/ [3], and with the state-of-the-art detection methods
+  including Zhang /et al/. [2], Li /et al/ [1], and Fu /et al/ [8].
+  Please zoom in to view fine details.
 
   Specular highlight detection and removal are fundamental and
   challenging tasks. Although recent methods have achieved promising
